force-app/main/default/objects/Lifestyle_Preference__c/Lifestyle_Preference__c.object-meta.xml
<CustomObject>
    <description>A list of Lifestyle preferences that a Guest might have</description>
    <label>Lifestyle Preference</label>
    <nameField>
        <displayFormat>LP-{000000}</displayFormat>
        <label>Lifestyle Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lifestyle Preferences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>