force-app/main/default/objects/Lifestyle_Preference__c/fields/Driver_Name__c.field-meta.xml
<CustomField>
    <fullName>Driver_Name__c</fullName>
    <description>The name of the Guests Chauffeur or driver</description>
    <inlineHelpText>The name of the Guests Chauffeur or driver</inlineHelpText>
    <label>First Name Of Driver</label>
    <length>100</length>
    <type>Text</type>
</CustomField>