force-app/main/default/objects/Lifestyle_Preference__c/fields/Favourite_Cities__c.field-meta.xml
<CustomField>
    <fullName>Favourite_Cities__c</fullName>
    <description>Guest&apos;s favourite cities.</description>
    <inlineHelpText>Guest&apos;s favourite cities.</inlineHelpText>
    <label>Favourite Cities</label>
    <type>TextArea</type>
</CustomField>