force-app/main/default/objects/Lifestyle_Preference__c/fields/Favourite_Drink__c.field-meta.xml
<CustomField>
    <fullName>Favourite_Drink__c</fullName>
    <description>What is the guests favourite drink(s)</description>
    <inlineHelpText>What is the guests favourite drink(s)</inlineHelpText>
    <label>Favourite Drink</label>
    <type>TextArea</type>
</CustomField>