force-app/main/default/objects/Lifestyle_Preference__c/fields/Favourite_Food__c.field-meta.xml
<CustomField>
    <fullName>Favourite_Food__c</fullName>
    <description>What is the guests favourite food</description>
    <inlineHelpText>What is the guests favourite food</inlineHelpText>
    <label>Favourite Food</label>
    <type>TextArea</type>
</CustomField>