force-app/main/default/objects/Lifestyle_Preference__c/fields/Favourite_Magazine__c.field-meta.xml
<CustomField>
    <fullName>Favourite_Magazine__c</fullName>
    <description>What is the guests favourite magazine</description>
    <inlineHelpText>What is the guests favourite magazine</inlineHelpText>
    <label>Favourite Magazine</label>
    <length>100</length>
    <type>Text</type>
</CustomField>