force-app/main/default/objects/Lifestyle_Preference__c/fields/Favourite_Newspaper__c.field-meta.xml
<CustomField>
    <fullName>Favourite_Newspaper__c</fullName>
    <description>What is the guests favourite Newspaper</description>
    <inlineHelpText>What is the guests favourite Newspaper</inlineHelpText>
    <label>Favourite Newspaper</label>
    <length>100</length>
    <type>Text</type>
</CustomField>