force-app/main/default/objects/Lifestyle_Preference__c/fields/Favourite_Restaurants__c.field-meta.xml
<CustomField>
    <fullName>Favourite_Restaurants__c</fullName>
    <description>What Restaurants the guest likes</description>
    <inlineHelpText>What Restaurants the guest likes</inlineHelpText>
    <label>Favourite Restaurants</label>
    <type>TextArea</type>
</CustomField>