force-app/main/default/objects/Lifestyle_Preference__c/fields/PR_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>PR_Agent_Name__c</fullName>
    <description>The name of the PR agent or agency that represents the guest</description>
    <inlineHelpText>The name of the PR agent or agency that represents the guest</inlineHelpText>
    <label>PR Agent Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>