force-app/main/default/objects/Lifestyle_Preference__c/fields/Security_Name__c.field-meta.xml
<CustomField>
    <fullName>Security_Name__c</fullName>
    <description>The name(s) of the Security detail for the guest</description>
    <inlineHelpText>The name(s) of the Security detail for the guest</inlineHelpText>
    <label>First Name of Security Guard</label>
    <length>100</length>
    <type>Text</type>
</CustomField>