force-app/main/default/objects/Lifestyle_Preference__c/fields/VIP_Guest__c.field-meta.xml
<CustomField>
    <fullName>VIP_Guest__c</fullName>
    <description>The VIP guest</description>
    <inlineHelpText>The VIP Guest</inlineHelpText>
    <label>VIP Guest</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Lifestyle preference must be on a person account</errorMessage>
        <filterItems>
            <field>Account.PersonContact.AccountId</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lifestyle Preferences</relationshipLabel>
    <relationshipName>Lifestyle_Preferences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>